sumo/tests/duarouter/alternatives/style1_input/errors/xml/double_attribute/errors.duarouter
Error: attribute 'probability' is already specified for element 'route'
 In file 'input_alts.rou.alt.xml'
 At line/column 10/57.

Quitting (on error).
